--- a/SmartMove/app/src/main/res/values/strings.xml
+++ b/SmartMove/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="a_quoi_quivaut_ma_conso_carbone">A quoi équivaut ma conso carbone?</string>
+    <string name="impact_carbone">Impact carbone:</string>
+    <string name="comparaison">Comparaison:</string>
 
 
 </resources>
