Ajout du bouton pour comprendre les résults

--- a/SmartMove/app/src/main/res/values/strings.xml
+++ b/SmartMove/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="a_quoi_quivaut_ma_conso_carbone">A quoi équivaut ma conso carbone?</string>
     <string name="impact_carbone">Impact carbone:</string>
     <string name="comparaison">Comparaison:</string>
+    <string name="explication_du_r_sultat">Explication du résultat :</string>
 
 
 </resources>
